syntax = "proto3";
package abci;

option go_package = "github.com/gnolang/gno/tm2/pkg/bft/abci/types/pb";

// imports
import "github.com/gnolang/gno/tm2/pkg/crypto/merkle/merkle.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

// messages
message RequestBase {
}

message RequestEcho {
	RequestBase request_base = 1 [json_name = "RequestBase"];
	string message = 2 [json_name = "Message"];
}

message RequestFlush {
	RequestBase request_base = 1 [json_name = "RequestBase"];
}

message RequestInfo {
	RequestBase request_base = 1 [json_name = "RequestBase"];
}

message RequestSetOption {
	RequestBase request_base = 1 [json_name = "RequestBase"];
	string key = 2 [json_name = "Key"];
	string value = 3 [json_name = "Value"];
}

message RequestInitChain {
	RequestBase request_base = 1 [json_name = "RequestBase"];
	google.protobuf.Timestamp time = 2 [json_name = "Time"];
	string chain_id = 3 [json_name = "ChainID"];
	ConsensusParams consensus_params = 4 [json_name = "ConsensusParams"];
	repeated ValidatorUpdate validators = 5 [json_name = "Validators"];
	google.protobuf.Any app_state = 6 [json_name = "AppState"];
}

message RequestQuery {
	RequestBase request_base = 1 [json_name = "RequestBase"];
	bytes data = 2 [json_name = "Data"];
	string path = 3 [json_name = "Path"];
	sint64 height = 4 [json_name = "Height"];
	bool prove = 5 [json_name = "Prove"];
}

message RequestBeginBlock {
	RequestBase request_base = 1 [json_name = "RequestBase"];
	bytes hash = 2 [json_name = "Hash"];
	google.protobuf.Any header = 3 [json_name = "Header"];
	LastCommitInfo last_commit_info = 4 [json_name = "LastCommitInfo"];
}

message RequestCheckTx {
	RequestBase request_base = 1 [json_name = "RequestBase"];
	bytes tx = 2 [json_name = "Tx"];
	sint64 type = 3 [json_name = "Type"];
}

message RequestDeliverTx {
	RequestBase request_base = 1 [json_name = "RequestBase"];
	bytes tx = 2 [json_name = "Tx"];
}

message RequestEndBlock {
	RequestBase request_base = 1 [json_name = "RequestBase"];
	sint64 height = 2 [json_name = "Height"];
}

message RequestCommit {
	RequestBase request_base = 1 [json_name = "RequestBase"];
}

message ResponseBase {
	google.protobuf.Any error = 1 [json_name = "Error"];
	bytes data = 2 [json_name = "Data"];
	repeated google.protobuf.Any events = 3 [json_name = "Events"];
	string log = 4 [json_name = "Log"];
	string info = 5 [json_name = "Info"];
}

message ResponseException {
	ResponseBase response_base = 1 [json_name = "ResponseBase"];
}

message ResponseEcho {
	ResponseBase response_base = 1 [json_name = "ResponseBase"];
	string message = 2 [json_name = "Message"];
}

message ResponseFlush {
	ResponseBase response_base = 1 [json_name = "ResponseBase"];
}

message ResponseInfo {
	ResponseBase response_base = 1 [json_name = "ResponseBase"];
	string abci_version = 2 [json_name = "ABCIVersion"];
	string app_version = 3 [json_name = "AppVersion"];
	sint64 last_block_height = 4 [json_name = "LastBlockHeight"];
	bytes last_block_app_hash = 5 [json_name = "LastBlockAppHash"];
}

message ResponseSetOption {
	ResponseBase response_base = 1 [json_name = "ResponseBase"];
}

message ResponseInitChain {
	ResponseBase response_base = 1 [json_name = "ResponseBase"];
	ConsensusParams consensus_params = 2 [json_name = "ConsensusParams"];
	repeated ValidatorUpdate validators = 3 [json_name = "Validators"];
}

message ResponseQuery {
	ResponseBase response_base = 1 [json_name = "ResponseBase"];
	bytes key = 2 [json_name = "Key"];
	bytes value = 3 [json_name = "Value"];
	tm.Proof proof = 4 [json_name = "Proof"];
	sint64 height = 5 [json_name = "Height"];
}

message ResponseBeginBlock {
	ResponseBase response_base = 1 [json_name = "ResponseBase"];
}

message ResponseCheckTx {
	ResponseBase response_base = 1 [json_name = "ResponseBase"];
	sint64 gas_wanted = 2 [json_name = "GasWanted"];
	sint64 gas_used = 3 [json_name = "GasUsed"];
}

message ResponseDeliverTx {
	ResponseBase response_base = 1 [json_name = "ResponseBase"];
	sint64 gas_wanted = 2 [json_name = "GasWanted"];
	sint64 gas_used = 3 [json_name = "GasUsed"];
}

message ResponseEndBlock {
	ResponseBase response_base = 1 [json_name = "ResponseBase"];
	repeated ValidatorUpdate validator_updates = 2 [json_name = "ValidatorUpdates"];
	ConsensusParams consensus_params = 3 [json_name = "ConsensusParams"];
	repeated google.protobuf.Any events = 4 [json_name = "Events"];
}

message ResponseCommit {
	ResponseBase response_base = 1 [json_name = "ResponseBase"];
}

message StringError {
	string value = 1;
}

message ConsensusParams {
	BlockParams block = 1 [json_name = "Block"];
	ValidatorParams validator = 2 [json_name = "Validator"];
}

message BlockParams {
	sint64 max_tx_bytes = 1 [json_name = "MaxTxBytes"];
	sint64 max_data_bytes = 2 [json_name = "MaxDataBytes"];
	sint64 max_block_bytes = 3 [json_name = "MaxBlockBytes"];
	sint64 max_gas = 4 [json_name = "MaxGas"];
	sint64 time_iota_ms = 5 [json_name = "TimeIotaMS"];
}

message ValidatorParams {
	repeated string pub_key_type_ur_ls = 1 [json_name = "PubKeyTypeURLs"];
}

message ValidatorUpdate {
	string address = 1 [json_name = "Address"];
	google.protobuf.Any pub_key = 2 [json_name = "PubKey"];
	sint64 power = 3 [json_name = "Power"];
}

message LastCommitInfo {
	sint32 round = 1 [json_name = "Round"];
	repeated VoteInfo votes = 2 [json_name = "Votes"];
}

message VoteInfo {
	string address = 1 [json_name = "Address"];
	sint64 power = 2 [json_name = "Power"];
	bool signed_last_block = 3 [json_name = "SignedLastBlock"];
}

message EventString {
	string value = 1;
}

message MockHeader {
	string version = 1;
	string chain_id = 2;
	sint64 height = 3;
	google.protobuf.Timestamp time = 4;
	sint64 num_txs = 5;
	sint64 total_txs = 6;
}